@@ -47,6 +47,7 @@
  - upstart: cloud-init-nonet.conf trap the TERM signal, so that dmesg or other
    output does not get a 'killed by TERM signal' message.
  - support resizing partitions via growpart or parted (LP: #1136936)
+ - allow specifying apt-get command in distro config ('apt_get_command')
 
 0.7.1:
  - sysvinit: fix missing dependency in cloud-init job for RHEL 5.6 
